# program_cookie

./: CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: publish.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name_slug}}/: .pre-commit-config.yaml  INSTALL.md  README.md  main.pyw  mainUi.py  pyproject.toml  style.py
{{cookiecutter.project_name_slug}}/.github/: CODEOWNERS
{{cookiecutter.project_name_slug}}/.github/workflows/: publish.yml
