[tool.semantic_release]
version_variable = ["pyproject.toml:version"]
branch = "main"
upload_to_release = true
upload_to_repository = false
build_command = "mkdir -p dist"

[tool.poetry]
name = "program_cookie"
version = "0.0.0"
description = "A cookiecutter for prograns build with python."
authors = ["Wolf Gear <opensource@wolfgear.tech>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "*"
colorama = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
